Prevent text overlap of footer and paragraph tags

--- a/_sass/jekyll-theme-minimalist.scss
+++ b/_sass/jekyll-theme-minimalist.scss
@@ -176,7 +176,7 @@ strong {
 section {
   width: 610px;
   float:right;
-  padding-bottom:50px;
+  padding-bottom:30px;
 }
 
 small {
@@ -194,7 +194,7 @@ hr {
 footer, .sidebar-footer {
   width:185px;
   float:left;
-  bottom:50px;
+  bottom:30px;
   -webkit-font-smoothing:subpixel-antialiased;
 }
 
